--- a/pyspark-basics.ipynb
+++ b/pyspark-basics.ipynb
@@ -23,6 +23,23 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "46cc7756-6af1-42fa-a745-dc673979234d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "[docs](https://docs.databricks.com/aws/en/pyspark/basics)\n",
+    "ใน part นี้ คำอธิบายและ code จะอยู่ในไฟล์นี้ไฟล์เดียว"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
