--- a/tutorial-uc-spark-dataframe-python.ipynb
+++ b/tutorial-uc-spark-dataframe-python.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "44f51130-0c36-4e36-9e96-b548005c5a0b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "- DataBricks Doc : [link](https://docs.databricks.com/aws/en/getting-started/dataframes)\n",
+    "- อธิบายคร่าวๆ(TH Ver.) : [link](https://docs.google.com/document/d/1j_pvp97Zi-EklHmFmac8nPTjyC2I1uYm4jN6-HToDls/edit?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
