--- a/tutorial-uc-spark-dataframe-python.ipynb
+++ b/tutorial-uc-spark-dataframe-python.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "44f51130-0c36-4e36-9e96-b548005c5a0b",
      "showTitle": false,
@@ -305,6 +308,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "bb514afc-7d6d-47a9-974c-e2f533d1ef17",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "a2cbab74-ee4e-47fd-a673-6fcca20e3750",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -347,7 +371,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1821093c-910f-4ea0-b9a0-e490aacbf35a",
+     "nuid": "f27e7dd6-c1f0-402c-8def-65cbd0253262",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -356,6 +380,27 @@
    "outputs": [],
    "source": [
     "display(spark.read.format(\"json\").json(\"dbfs:/Volumes/workspace/default/tutorial/json_data/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1821093c-910f-4ea0-b9a0-e490aacbf35a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(spark.read.format(\"json\").json(\"dbfs:/Volumes/workspace/default/tutorial/json_data/\").count())"
    ]
   },
   {
@@ -441,12 +486,12 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5152841941526381,
+     "commandId": 6951270392417694,
      "dataframes": [
       "_sqldf"
      ]
     },
-    "pythonIndentUnit": 2
+    "pythonIndentUnit": 4
    },
    "notebookName": "tutorial-uc-spark-dataframe-python",
    "widgets": {}
