--- a/pyspark-basics.ipynb
+++ b/pyspark-basics.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "## Import data types\n",
     "\n",
-    "PySpark operations จำนวนมากกำหนดใหเราใช้ SQL functions หรือไม่ก็ต้องใช้วิธีการเดียวกันกับ Spark แบบดั้งเดิม เพราะฉะนั้นเราจะ import module ที่น่าจะจำเป็นต่อการใช้งานมาไว้ก่อน (อย่างเหมาะสม ไม่ต้อง import เยอะเกินความจำเป็น)"
+    "PySpark operations จำนวนมากกำหนดให้เราใช้ SQL functions หรือไม่ก็ต้องใช้วิธีการเดียวกันกับ Spark แบบดั้งเดิม เพราะฉะนั้นเราจะ import module ที่น่าจะจำเป็นต่อการใช้งานมาไว้ก่อน (อย่างเหมาะสม ไม่ต้อง import เยอะเกินความจำเป็น)"
    ]
   },
   {
@@ -1613,7 +1613,7 @@
     }
    },
    "source": [
-    "- แบบแรก ตามโค้ดข้างล่างนี้ 2 ตัวอย่างนี้ทำงานเหมือนกัน คือ การ **drop แถวที่คอลัมน์ใดคอลัมน์หนึ่งเป็น null ออก**"
+    "- แบบแรก ตามโค้ดข้างล่างนี้ 2 บรรทัดนี้ทำงานเหมือนกัน คือ การ **drop แถวที่คอลัมน์ใดคอลัมน์หนึ่งเป็น null ออก**"
    ]
   },
   {
@@ -1818,7 +1818,7 @@
     }
    },
    "source": [
-    "จาก `df_that_one_customer`ที่เราสรางไว้ตั้งแต่ตอนนี้น ตอนนี้เราจะเอามันมาเพิ่มแถวข้อมูลเข้าไปรวมกันกับ `df_filtered_customer` โดยใช้ `union`"
+    "จาก `df_that_one_customer`ที่เราสร้างไว้ตั้งแต่ตอนนั้น ตอนนี้เราจะเอามันมาเพิ่มแถวข้อมูลเข้าไปรวมกันกับ `df_filtered_customer` โดยใช้ `union`"
    ]
   },
   {
@@ -2551,6 +2551,22 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "9cada17e-a6bd-4a1e-ad56-835db2e49aae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ตัวอย่างผลลัพธ์ตาราง(ดูหัวข้อเดียวกันกับใน notebook นี้) : [here](https://docs.google.com/document/d/1btW2acGv49PdjaKKqNCPFIvW90bwW3yyXxhhPToOLDA/edit?usp=sharing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "52b3a1fc-ff17-4eb3-a637-b5ea8adbaf08",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -2602,6 +2618,22 @@
    },
    "source": [
     "### Write your DataFrame as CSV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9433f010-b5b6-41d9-bbd6-43d7a61a0793",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ตัวอย่างผลลัพธ์ตาราง(ดูหัวข้อเดียวกันกับใน notebook นี้) : [here](https://docs.google.com/document/d/1btW2acGv49PdjaKKqNCPFIvW90bwW3yyXxhhPToOLDA/edit?usp=sharing)"
    ]
   },
   {
