--- a/pyspark-custom-data-sources.ipynb
+++ b/pyspark-custom-data-sources.ipynb
@@ -37,7 +37,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d55a1b1f-5860-46e9-8e56-8a2d129f0d03",
      "showTitle": false,
@@ -46,7 +49,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install faker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3d498775-b946-46c9-8109-5766bd5cd199",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%restart_python"
+   ]
   }
  ],
  "metadata": {
@@ -62,7 +88,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "PySpark custom data sources",
+   "notebookName": "pyspark-custom-data-sources",
    "widgets": {}
   },
   "language_info": {
