--- a/pyspark-custom-data-sources.ipynb
+++ b/pyspark-custom-data-sources.ipynb
@@ -42,7 +42,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "48f0a775-aab1-49b8-8da2-4ff92c95f81d",
      "showTitle": false,
@@ -63,7 +66,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b607616c-ff3f-4db6-a726-9868f9091fc5",
      "showTitle": false,
@@ -88,7 +94,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "07b6a641-db7e-470f-bb9c-b55074b5b120",
      "showTitle": false,
@@ -104,7 +113,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d783e768-c3f0-4a4c-b20c-ad1aa97437b7",
      "showTitle": false,
@@ -141,7 +153,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c7c78e46-f1c7-4f12-8e2b-ed8d77661f7e",
      "showTitle": false,
@@ -180,7 +195,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d4db210f-baaf-48b0-9ed8-b1994aae4434",
      "showTitle": false,
@@ -196,7 +214,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7cba68bd-7a7a-4ec5-8bb3-7718562513cb",
      "showTitle": false,
@@ -252,7 +273,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4011b73f-654c-4539-89d5-1d0aca15ef73",
      "showTitle": false,
@@ -268,7 +292,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "95c0fc38-3f3d-4435-a29c-6a19a1e92cce",
      "showTitle": false,
@@ -325,7 +352,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b68e5179-5b28-43af-b435-788518f2825e",
      "showTitle": false,
@@ -343,7 +373,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3d7d2618-022a-421e-b2e2-7590bd046675",
      "showTitle": false,
@@ -359,7 +392,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "55ae00cb-eafb-47f9-94fc-5be350563788",
      "showTitle": false,
@@ -444,7 +480,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7be9f554-8dbc-445a-a901-d8698979b24e",
      "showTitle": false,
@@ -453,14 +492,105 @@
     }
    },
    "source": [
-    "# Example 2: Create a PySpark GitHub DataSource using variants"
+    "# Example 2: Create a PySpark GitHub DataSource"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1a2df685-595b-4fb7-bb85-643aac5193e9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ในส่วนนี้ เป็นการดึงข้อมูลจาก GitHub เพื่อมาแสดงเป็นตารางใน spark\n",
+    "- ***เดิม*** ตาม docs จะมีการนำเข้าข้อมูลแบบ **Variant** เข้ามาโดยใช้ python ด้วย แต่จากการทดลองหลายครั้ง พบว่าติดปัญหาผ่านการใช้ python และยังหาวิธีแก้ไขไม่สำเร็จ \n",
+    "- หากใช้ SQL ปกติอาจจะนำเสนอเกี่ยวกับรายละเอียดของ Variant Data ได้ ดังตัวอย่างด้านล่าง ผลลัพธ์จะแสดงให้เห็นว่า ตรงส่วน col `my_variant_data` เป็น object ไม่ใช่ str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e43e4b39-a0d6-49aa-ae71-a4e4faa3c6bd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT \n",
+    "  parse_json('{\"name\": \"Variant\", \"stamina\": 100, \"active\": true}') AS my_variant_data,\n",
+    "  parse_json('{\"name\": \"Variant\", \"stamina\": 100}'):stamina AS extracted_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "382319d4-44bd-4133-b1e7-8eeea9da2218",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ซึ่งเดิมที การจะใช้ข้อมูลประเภท Variant ได้ จะต้องใช้ runtime version 17.1 ขึ้นไป และสิ่งที่เรามีควรจะสามารถใช้งานได้บน python ด้วย ทั้งนี้ เพื่อให้ตัวอย่างนี้แสดงเนื้อหาในการนำข้อมูลจากแหล่งต่างๆแบบกำหนดเองมาใช้งานต่อ จึงจะปรับประเภท data ใน schema ให้เป็นประเภทแบบที่เราๆรู้จักกันก่อน"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "151250bc-3051-4055-9604-5da9cb7376ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT current_version();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a134f7f8-d505-4740-bff3-add20b5b0fb9",
      "showTitle": false,
@@ -470,6 +600,30 @@
    },
    "source": [
     "## Step 1: Define the GitHub DataSource"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ff936f0a-d250-488d-9daa-6f6a52713b25",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ขั้นแรก : Define Class หลักสำหรับแหล่งข้อมูลขึ้นมา โดยจะมี 3 ส่วนใน Class คือ\n",
+    "- name : ชื่อที่จะใช้ตอนเราเอามาใช้กับ spark\n",
+    "- schema : โครงสร้างข้อมูลที่จะอ่าน ว่ามี column อะไรบ้าง, data type เป็นยังไง \n",
+    "- reader : วิธีการส่งต่องานไปยังตัวที่ใช้ในการอ่านข้อมูลจริง\n",
+    "\n",
+    "ซึ่งส่วนนี้จะเหมือนกันกับตัวอย่างแรก"
    ]
   },
   {
@@ -502,16 +656,19 @@
     "    def name(self):\n",
     "        return \"githubVariant\"\n",
     "    def schema(self):\n",
-    "        return \"id int, title string, user variant, created_at string, updated_at string\"\n",
+    "        return \"id int, title string, user string, created_at string, updated_at string\"\n",
     "    def reader(self, schema):\n",
-    "        return GithubVariantPullRequestReader(self.options)"
+    "        return GithubVariantPullRequestReader(self.options)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6baf3458-36ac-43db-af9b-8b5c1ac1725e",
      "showTitle": false,
@@ -520,7 +677,26 @@
     }
    },
    "source": [
-    "## Step 2: Implement the reader to retrieve pull requests"
+    "## Step 2: Implement the reader to retrieve pull requests (เหลืออธิบายเพิ่มเติม)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1cb0375f-3c8e-4cc3-8a19-68f7bd58f2ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ขั้นที่ 2 : ส่วนนี้คือส่วนของการสร้างตัวอ่านข้อมูล แต่จะมีความซับซ้อนกว่าตัวอย่างแรก เนื่องจากเป็นการดึงข้อมูลจาก GitHub"
    ]
   },
   {
@@ -555,14 +731,14 @@
     "        if self.token is not None:\n",
     "            header[\"Authorization\"] = f\"Bearer {self.token}\"\n",
     "        url = f\"https://api.github.com/repos/{self.repo}/pulls\"\n",
-    "        response = requests.get(url)\n",
+    "        response = requests.get(url, headers=header)\n",
     "        response.raise_for_status()\n",
     "        prs = response.json()\n",
     "        for pr in prs:\n",
     "            yield Row(\n",
     "                id = pr.get(\"number\"),\n",
     "                title = pr.get(\"title\"),\n",
-    "                user = VariantVal.parseJson(json.dumps(pr.get(\"user\"))),\n",
+    "                user = pr.get(\"user\"),\n",
     "                created_at = pr.get(\"created_at\"),\n",
     "                updated_at = pr.get(\"updated_at\")\n",
     "            )"
@@ -572,7 +748,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b6653402-fd46-48d7-8ca9-5a49cf4d73d7",
      "showTitle": false,
@@ -603,14 +782,17 @@
    "outputs": [],
    "source": [
     "spark.dataSource.register(GithubVariantDataSource)\n",
-    "spark.read.format(\"github_variant\").option(\"numRows\", 3).load(\"apache/spark\").display()"
+    "spark.read.format(\"githubVariant\").option(\"numRows\", 3).load(\"apache/spark\").display()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9b000069-e028-445c-af17-4e4f76ddc674",
      "showTitle": false,
@@ -619,14 +801,17 @@
     }
    },
    "source": [
-    "# Example 3: Create PySpark DataSource for streaming read and write"
+    "# Example 3: Create PySpark DataSource for streaming read and write (ยังติดปัญหาอยู่)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "61a0eed2-2ee9-4c76-b1b6-05c9617af6f7",
      "showTitle": false,
@@ -686,7 +871,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "72e3fa42-e417-495e-a03d-00d2158bf458",
      "showTitle": false,
@@ -702,7 +890,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5f878908-bb3f-4933-8858-f8061f6ff153",
      "showTitle": false,
@@ -786,7 +977,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "10975250-e634-4f23-aab6-6e3ed0b59e9c",
      "showTitle": false,
@@ -851,7 +1045,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "420360f1-6ef3-4a17-aa14-2d5185dd6cc9",
      "showTitle": false,
@@ -928,7 +1125,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fd7f2cb5-1a59-468b-be20-ca57773cc68a",
      "showTitle": false,
@@ -938,6 +1138,47 @@
    },
    "source": [
     "## Step 4: Register and use the example data source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "324bad73-2761-4a96-bfa4-1fa59511aecb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "เดิมตาม docs จะเป็นโค้ดตามด้านล่าง แต่ cluster แบบฟรีที่เราใช้ไม่ support micro-batch trigger สำหรับการ streaming ซึ่ง databricks แนะนำให้ใช้ `availableNow` หรือ `once` แทน"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "76c2fbae-91cd-42ff-b412-ade226946391",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# spark.dataSource.register(FakeStreamDataSource)\n",
+    "# query = spark.readStream.format(\"fakestream\").load().writeStream.format(\"fake\").start(\"/output_path\")"
    ]
   },
   {
@@ -959,7 +1200,16 @@
    "outputs": [],
    "source": [
     "spark.dataSource.register(FakeStreamDataSource)\n",
-    "query = spark.readStream.format(\"fakestream\").load().writeStream.format(\"fake\").start(\"/output_path\")"
+    "query = (\n",
+    "  spark.readStream\n",
+    "  .format(\"fakestream\")\n",
+    "  .load()\n",
+    "  .writeStream\n",
+    "  .format(\"fake\")\n",
+    "  .option(\"checkpointLocation\", \"/Volumes/workspace/default/tutorial/_checkpoint\")\n",
+    "  .trigger(once=True)\n",
+    "  .start(\"/Volumes/workspace/default/tutorial\")\n",
+    ")"
    ]
   }
  ],
@@ -980,6 +1230,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7964221221169270,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "pyspark-custom-data-sources",
