--- a/pyspark-custom-data-sources.ipynb
+++ b/pyspark-custom-data-sources.ipynb
@@ -512,7 +512,7 @@
    },
    "source": [
     "ในส่วนนี้ เป็นการดึงข้อมูลจาก GitHub เพื่อมาแสดงเป็นตารางใน spark\n",
-    "- ***เดิม*** ตาม docs จะมีการนำเข้าข้อมูลแบบ **Variant** เข้ามาโดยใช้ python ด้วย แต่จากการทดลองหลายครั้ง พบว่าติดปัญหาผ่านการใช้ python และยังหาวิธีแก้ไขไม่สำเร็จ \n",
+    "- ***เดิม*** ตาม docs จะมีการนำเข้าข้อมูลแบบ [**Variant**](https://docs.databricks.com/aws/en/sql/language-manual/data-types/variant-type) เข้ามาโดยใช้ python ด้วย แต่จากการทดลองหลายครั้ง พบว่าติดปัญหาผ่านการใช้ python และยังหาวิธีแก้ไขไม่สำเร็จ \n",
     "- หากใช้ SQL ปกติอาจจะนำเสนอเกี่ยวกับรายละเอียดของ Variant Data ได้ ดังตัวอย่างด้านล่าง ผลลัพธ์จะแสดงให้เห็นว่า ตรงส่วน col `my_variant_data` เป็น object ไม่ใช่ str"
    ]
   },
@@ -677,7 +677,7 @@
     }
    },
    "source": [
-    "## Step 2: Implement the reader to retrieve pull requests (เหลืออธิบายเพิ่มเติม)"
+    "## Step 2: Implement the reader to retrieve pull requests"
    ]
   },
   {
@@ -696,7 +696,14 @@
     }
    },
    "source": [
-    "ขั้นที่ 2 : ส่วนนี้คือส่วนของการสร้างตัวอ่านข้อมูล แต่จะมีความซับซ้อนกว่าตัวอย่างแรก เนื่องจากเป็นการดึงข้อมูลจาก GitHub"
+    "ขั้นที่ 2 : ส่วนนี้คือส่วนของการสร้างตัวอ่านข้อมูล แต่จะมีความซับซ้อนกว่าตัวอย่างแรก เนื่องจากเป็นการดึงข้อมูลจาก GitHub\n",
+    "\n",
+    "มี 2 ส่วน คือ\n",
+    "1. `__init__` ส่วนนี้จะเป็นส่วนที่รับ path ของ repo, token(ถ้ามี) หาก repo ว่าง จะไม่สามารถทำงานต่อได้\n",
+    "2. `read` ส่วนนี้จะมีการทำงานย่อยลงไปอีก กล่าวคือ\n",
+    "> - เตรียม HTTP Header\n",
+    "> - Request & Response\n",
+    "> - แปลงเป็น row ส่งกลับ (yield rows)"
    ]
   },
   {
@@ -726,15 +733,15 @@
     "\n",
     "    def read(self, partition):\n",
     "        header = {\n",
-    "            \"Accept\": \"application/vnd.github+json\",\n",
+    "            \"Accept\": \"application/vnd.github+json\", # ต้องการข้อมูลแบบ JSON\n",
     "        }\n",
-    "        if self.token is not None:\n",
+    "        if self.token is not None: # ถ้ามี token ให้แนบไปด้วย\n",
     "            header[\"Authorization\"] = f\"Bearer {self.token}\"\n",
-    "        url = f\"https://api.github.com/repos/{self.repo}/pulls\"\n",
-    "        response = requests.get(url, headers=header)\n",
-    "        response.raise_for_status()\n",
-    "        prs = response.json()\n",
-    "        for pr in prs:\n",
+    "        url = f\"https://api.github.com/repos/{self.repo}/pulls\" # เตรียม address ปลายทาง\n",
+    "        response = requests.get(url, headers=header) # สร้างตัวแปร response เพื่อไปรับผลจากการ request\n",
+    "        response.raise_for_status() # ตรวจสอบ status\n",
+    "        prs = response.json() # แปลงเป็น json\n",
+    "        for pr in prs: # loop ส่งข้อมูลกลับออกมาเป็น row\n",
     "            yield Row(\n",
     "                id = pr.get(\"number\"),\n",
     "                title = pr.get(\"title\"),\n",
@@ -761,6 +768,25 @@
    },
    "source": [
     "## Step 3: Register and use the data source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d79c80ba-46ca-48b4-8d45-7a6156ebf89a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "เหมือนเดิมจากที่เราเคยทำในตัวอย่างแรก เมื่อเรา custom data source ขึ้นมา ต้องมีการ `register` ให้ spark ทราบ แล้วใช้งานต่อไปได้"
    ]
   },
   {
@@ -801,7 +827,23 @@
     }
    },
    "source": [
-    "# Example 3: Create PySpark DataSource for streaming read and write (ยังติดปัญหาอยู่)"
+    "# Example 3: Create PySpark DataSource for streaming read and write"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6790acd8-8475-4beb-ba40-b415681bdcdd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ตัวอย่างนี้จะเป็นเชิง concept เท่านั้น เนื่องจากข้อจำกัดของ free version บน databricks"
    ]
   },
   {
@@ -1191,7 +1233,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5b796c4c-1e0f-4205-b74d-ebda942f10fa",
+     "nuid": "d25cf337-b599-4b21-b511-5b08be738cf1",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -1199,17 +1241,44 @@
    },
    "outputs": [],
    "source": [
-    "spark.dataSource.register(FakeStreamDataSource)\n",
+    "import uuid\n",
+    "\n",
+    "checkpoint = f\"/Volumes/workspace/default/tutorial/_checkpoint/{uuid.uuid4()}\"\n",
+    "\n",
     "query = (\n",
-    "  spark.readStream\n",
-    "  .format(\"fakestream\")\n",
-    "  .load()\n",
-    "  .writeStream\n",
-    "  .format(\"fake\")\n",
-    "  .option(\"checkpointLocation\", \"/Volumes/workspace/default/tutorial/_checkpoint\")\n",
-    "  .trigger(once=True)\n",
-    "  .start(\"/Volumes/workspace/default/tutorial\")\n",
-    ")"
+    "    spark.readStream\n",
+    "        .format(\"fakestream\")\n",
+    "        .load()\n",
+    "        .writeStream\n",
+    "        .format(\"memory\")\n",
+    "        .queryName(\"test_stream\")\n",
+    "        .option(\"checkpointLocation\", checkpoint)\n",
+    "        .trigger(once=True)\n",
+    "        .start()\n",
+    ")\n",
+    "\n",
+    "query.awaitTermination()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "123b31ec-a504-4aee-b149-d3d40d0ceee4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"SELECT * FROM test_stream\").show(truncate=False)"
    ]
   }
  ],
@@ -1231,7 +1300,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7964221221169329,
+     "commandId": 6666765633529300,
      "dataframes": [
       "_sqldf"
      ]
